replace investors array instead of pushing to it
